# pyatlas

./: Makefile  README.md  pyproject.toml
pyatlas/: compositor.py  extract.py  lua_exporter.py  main.py  parse_jsons.py  solver.py  types.py
