[project]
name = "pyatlas"
version = "0.1.0"
description = ""
requires-python = ">= 3.10"
authors = [{name = "HYGEOS", email = "contact@hygeos.com"}]
dependencies = [
    "numpy",
    "pillow",
    "pyinstaller"
]

[project.optional-dependencies]
git = [
    # insert github dependencies
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {}}

[project.scripts]
pyatlas = "pyatlas.main:main"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pyatlas = { path = ".", editable = true, extras = ["git"] }

[tool.pixi.tasks]
tests = "pytest tests/"


[tool.pixi.dependencies]
ipykernel = "*"
pytest = "*"
pytest-html = "*"
matplotlib-base = "*"
pytest-xdist = "*"
numpy = "*"
pillow = "*"
pyinstaller = "*"

[tool.pixi.environments]
default = { features = ['sys', 'sub', 'dev'], solve-group = "default" }

[tool.pixi.feature.sys.dependencies]

[tool.pixi.feature.dev.dependencies]

[tool.pixi.feature.sub.dependencies]
